# docs/swagger.json
@@ -404,6 +404,23 @@
         }
       }
     },
+    "/plan": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "organization",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/sites": {
       "get": {
         "description": "",
